# torch-mlir

./: .gitmodules  CMakeLists.txt  setup.py
examples/: onnx_add.py  onnx_logsoftmax.py  onnx_resnet18.py
lib/: CMakeLists.txt  InitAll.cpp
lib/CAPI/: CMakeLists.txt  ONNXImporter.cpp
lib/Conversion/: CMakeLists.txt  Passes.cpp
lib/Conversion/ONNXToTorch/: Basic.cpp  CMakeLists.txt  ONNXToTorch.cpp  PopulatePatterns.h  Utils.h
lib/Dialect/: CMakeLists.txt
lib/Dialect/ONNX/: CMakeLists.txt
lib/Dialect/ONNX/Builder/: CMakeLists.txt  FrontendDialectHelper.cpp  FrontendDialectTransformer.cpp
lib/Dialect/ONNX/IR/: CMakeLists.txt  DialectBuilder.cpp  ONNXDialect.cpp  ONNXEinsumOpHelper.cpp  ONNXOps.cpp  ONNXOpsHelper.cpp  ONNXShapeHelper.cpp  ONNXTypes.cpp  Rewrite.cpp
lib/Dialect/ONNX/IR/ShapeInference/: ArgMinMax.cpp  AveragePool.cpp  CategoryMapper.cpp  Clip.cpp  Compress.cpp  Concat.cpp  Conv.cpp  DepthToSpace.cpp  Expand.cpp  Flatten.cpp  Gather.cpp  GatherElements.cpp  GatherND.cpp  Gemm.cpp  LRN.cpp  MatMul.cpp  MaxPool.cpp  ONNXShapeHelper.cpp  OneHot.cpp  Pad.cpp  Reduction.cpp  Reshape.cpp  ReverseSequence.cpp  RoiAlign.cpp  Shape.cpp  Slice.cpp  SpaceToDepth.cpp  Split.cpp  Squeeze.cpp  Tile.cpp  TopK.cpp  Transpose.cpp  Unsqueeze.cpp
lib/Dialect/ONNX/Interface/: CMakeLists.txt  HasOnnxSubgraphOpInterface.cpp  ResultTypeInferenceOpInterface.cpp  ShapeInferenceOpInterface.cpp
lib/Dialect/ONNX/Mlir/: CMakeLists.txt  DialectBuilder.cpp  IndexExpr.cpp  IndexExprDetail.cpp
lib/Dialect/ONNX/Support/: CMakeLists.txt  Diagnostic.cpp  TypeUtilities.cpp
lib/Dialect/ONNX/Transforms/: CMakeLists.txt  Decompose.cpp  DecomposeEinsum.cpp  EraseONNXEntryPoint.cpp  PassDetail.h  Passes.cpp
lib/Dialect/Torch/IR/: TorchTypes.cpp
lib/Dialect/Torch/Transforms/: CMakeLists.txt  RefineFuncValueSemantics.cpp
lib/Dialect/Torch/Utils/: CMakeLists.txt
lib/Dialect/TorchConversion/IR/: TorchConversionOps.cpp
lib/Dialect/TorchConversion/Transforms/: CMakeLists.txt  FrontendTypeConversion.cpp  FrontendTypeConversionPasses.cpp  Passes.cpp
(+39 files in other folders)
